[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "snapapi"
dynamic = ["version"]
description = "Framework/tookit berbasis pydantic dan FastAPI untuk implementasi SNAP (Standar Nasional Open API Pembayaran) Indonesia"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["snap", "pg", "payment gateway", "bank", "api"]

authors = [
    { name = "S Deta Harvianto", email = "sdetta@gmail.com" },
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "starlette>=0.40.0,<0.47.0",
    "pydantic>=2.10.6,<3.0.0",
    "typing-extensions>=4.12.2",
    "fastapi>=0.115.10",
    "PyJWT>=2.9.0",
    "pycryptodome>=3.21.0",
]

[project.urls]
Homepage = "https://github.com/sdettahar/snapapi"
Repository = "https://github.com/sdettahar/snapapi"
Issues = "https://github.com/sdettahar/snapapi/issues"

[tool.pdm]
version = { source = "file", path = "snapapi/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = ["app/", "tests/"]

[tool.mypy]
disable_error_code = ["import-untyped"]